[gd_scene load_steps=8 format=3 uid="uid://v17nu4ome3gg"]

[ext_resource type="Script" path="res://Refreshments/foods/food.gd" id="1_eba6f"]
[ext_resource type="Texture2D" uid="uid://nlen1ybdbxi6" path="res://Assets/Images/refreshments/chicken_nugget/0.png" id="2_n1484"]
[ext_resource type="Texture2D" uid="uid://c3utb3p4kx3bh" path="res://Assets/Images/refreshments/chicken_nugget/1.png" id="3_hdpyd"]
[ext_resource type="AudioStream" uid="uid://c4uuj42ai12et" path="res://Assets/Audio/Sounds/eating/Fried Chicken Eating Sound Effect [h_VwzeZPbj8].mp3" id="4_67ew6"]
[ext_resource type="Texture2D" uid="uid://dwiiee3gr2woq" path="res://Assets/Images/icons/empty.png" id="4_rbso5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ie72q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_n1484")
}, {
"duration": 1.0,
"texture": ExtResource("2_n1484")
}, {
"duration": 1.0,
"texture": ExtResource("3_hdpyd")
}, {
"duration": 1.0,
"texture": ExtResource("4_rbso5")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jijed"]
size = Vector2(173.913, 226.087)

[node name="chicken_nugget" type="Node2D" groups=["food"]]
script = ExtResource("1_eba6f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.46, 0.46)
sprite_frames = SubResource("SpriteFrames_ie72q")

[node name="Button" type="Button" parent="AnimatedSprite2D"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.159
anchor_top = 0.072
anchor_right = 0.763
anchor_bottom = 0.852
offset_left = -149.874
offset_top = -149.861
offset_right = -150.074
offset_bottom = -149.861
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Area2D_food" type="Area2D" parent="AnimatedSprite2D/Button"]
position = Vector2(64, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Button/Area2D_food"]
position = Vector2(25.1304, 53.3913)
shape = SubResource("RectangleShape2D_jijed")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_67ew6")
volume_db = -5.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="button_down" from="AnimatedSprite2D/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="AnimatedSprite2D/Button" to="." method="_on_button_button_up"]
[connection signal="area_shape_entered" from="AnimatedSprite2D/Button/Area2D_food" to="." method="_on_area_2d_area_shape_entered"]
