[gd_scene load_steps=8 format=3 uid="uid://jvqb3lditxqv"]

[ext_resource type="Script" path="res://Refreshments/foods/food.gd" id="1_eba6f"]
[ext_resource type="Texture2D" uid="uid://cq1j4t8syf4ng" path="res://Assets/Images/refreshments/fry/0.png" id="2_bcr3j"]
[ext_resource type="Texture2D" uid="uid://dl1v23nx751et" path="res://Assets/Images/refreshments/fry/1.png" id="3_dlf35"]
[ext_resource type="Texture2D" uid="uid://dwiiee3gr2woq" path="res://Assets/Images/icons/empty.png" id="3_egllg"]
[ext_resource type="AudioStream" uid="uid://c4uuj42ai12et" path="res://Assets/Audio/Sounds/eating/Fried Chicken Eating Sound Effect [h_VwzeZPbj8].mp3" id="3_ileu4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ie72q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bcr3j")
}, {
"duration": 1.0,
"texture": ExtResource("2_bcr3j")
}, {
"duration": 1.0,
"texture": ExtResource("3_dlf35")
}, {
"duration": 1.0,
"texture": ExtResource("3_egllg")
}],
"loop": false,
"name": &"default",
"speed": 2.5
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jijed"]
size = Vector2(47, 236)

[node name="fry" type="Node2D" groups=["food"]]
script = ExtResource("1_eba6f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5.72205e-06, 5.72205e-06)
scale = Vector2(0.81, 0.81)
sprite_frames = SubResource("SpriteFrames_ie72q")

[node name="Button" type="Button" parent="AnimatedSprite2D"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.353
anchor_top = 0.067
anchor_right = 0.51
anchor_bottom = 0.85
offset_left = -149.9
offset_top = -150.1
offset_right = -150.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Area2D_food" type="Area2D" parent="AnimatedSprite2D/Button"]
position = Vector2(44, 130)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Button/Area2D_food"]
position = Vector2(-20.5, -14)
shape = SubResource("RectangleShape2D_jijed")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ileu4")
volume_db = -10.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="button_down" from="AnimatedSprite2D/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="AnimatedSprite2D/Button" to="." method="_on_button_button_up"]
[connection signal="area_shape_entered" from="AnimatedSprite2D/Button/Area2D_food" to="." method="_on_area_2d_area_shape_entered"]
